--- a/publishVersion/version_control_package.yaml
+++ b/publishVersion/version_control_package.yaml
@@ -11,8 +11,8 @@ action:
 
   #Optional Properties
   version: 1
-  id: "ap::package::versionControl"
-  category: "dcc/blender"
+  id: "ap::package::versioncontrol"
+  category: "versioncontrol"
   type: package
   enable: false
   description: A simple version publishing workflow 
@@ -25,7 +25,7 @@ action:
     path: "packageIcon.svg"
 
   actions:
-    - ap::vc::3YKOOMG550
+    - ap::vc::publish
 
 
     
