--- a/publishVersion/version_control_package.yaml
+++ b/publishVersion/version_control_package.yaml
@@ -22,7 +22,7 @@ action:
 
   author: "Anchorpoint Software GmbH"
   icon:
-    path: "packageIcon.svg"
+    path: "package_icon.svg"
 
   actions:
     - ap::vc::publish
