--- a/ffmpeg/ffmpeg_package.yaml
+++ b/ffmpeg/ffmpeg_package.yaml
@@ -7,18 +7,28 @@ version: "1.0"
 
 action:
   #Must Have Properties
-  name: "Video Conversion (FFmpeg)"
+  name: "Video Conversion"
 
   #Optional Properties
   version: 1
-  id: "ap::ffmpeg"
-  category: "ffmpeg"
+  id: "ap::package::video"
+  category: "video"
   type: package
   enable: false
   author: "Anchorpoint Software GmbH"
-  description: A set of actions that use FFmpeg to convert from image sequences to video or GIFs
+  description: Creates video files from image sequences or other videos with a single click
+  details: '
+    <p>This simple action converts an image sequence or a raw video into a small mp4 video. 
+      The frame rate and the location can be adjusted in the settings.</p>
+    <p><img src = "https://raw.githubusercontent.com/Anchorpoint-Software/ap-actions-data/main/png/videoConversion.png" width="400"></p>
+    '
+  icon:
+    path: "icons/packageIcon.svg"
 
   actions:
-    - ap::ffmpeg::videotogif
-    - ap::ffmpeg::seqtovideo
-    - ap::ffmpeg::videotomp4
+    - ap::video::videotogif
+    - ap::video::seqtovideo
+    - ap::video::videotomp4
+
+  platforms:
+    - win
