--- a/ffmpeg/ffmpeg_video_to_mp4.yaml
+++ b/ffmpeg/ffmpeg_video_to_mp4.yaml
@@ -7,17 +7,17 @@ version: "1.0"
 
 action:
   #Must Have Properties
-  name: "FFmpeg / Convert to MP4"
+  name: "Create Proxy"
 
   #Optional Properties
   version: 1
-  id: "ap::ffmpeg::videotomp4"
-  category: "ffmpeg/video"
+  id: "ap::video::videotomp4"
+  category: "video"
   type: python
   enable: false
   author: "Anchorpoint Software GmbH"
 
-  description: Converts a sequence of images to a video using FFmpeg
+  description: Creates a proxy video file
   script: "ffmpeg_img_to_video.py"
   inputs:
     ffmpeg_win: "${yaml_dir}/ffmpeg.exe"
@@ -28,4 +28,4 @@ action:
   #Where to register this action: on all files matching the filter
   register:
     file:
-      filter: "*.mov;*.MOV;*.mp4;*.m4v;*.mpg;*.avi;*.wmv;*.3gp;*.3gp2;*.avchd;*.dv;*.mkv"
+      filter: "*.mov;*.MOV;*.m4v;*.mpg;*.avi;*.wmv;*.3gp;*.3gp2;*.avchd;*.dv;*.mkv"
