--- a/versioncontrol/actions/git_timeline.yaml
+++ b/versioncontrol/actions/git_timeline.yaml
@@ -5,19 +5,12 @@
 
 version: 1.0
 action:
-  name: "Git Get Pending Changes"
+  name: "Git Timeline"
 
   version: 1
-  id: git::pendingchanges
+  id: git::timeline
   category: git
   type: python
   author: Anchorpoint Software GmbH
-  description: Prints pending changes to the console
-  icon:
-    path: :/icons/version.svg
 
-  script: git_get_pending_changes.py
-
-  register:
-    folder:
-      enable: true
+  script: git_timeline.py
