Added action description

--- a/cloudDrive/unmount.yaml
+++ b/cloudDrive/unmount.yaml
@@ -5,14 +5,14 @@
 
 version: 1.0
 action:
-  name: Unmount all Cloud Drives
+  name: Unmount
 
   version: 1
   id: "ap::cloudDrive::unmount"
   category: user
   type: python
   author: Matthäus Niedoba
-  description: "Deactivates all AWS Drives"
+  description: "Deactivates this cloud drive"
   icon:
     path: icons/driveStrike.svg
 
