--- a/examples/trigger/on_timeout.yaml
+++ b/examples/trigger/on_timeout.yaml
@@ -11,15 +11,9 @@ action:
   id: ap::examples::trigger::timer
   type: python
   author: Anchorpoint Software GmbH
-  description: "Example Python trigger that is executed every x seconds"
+  description: "Example Python trigger that is executed every minute"
   icon:
     path: :/icons/action.svg
 
   script: on_timeout.py
-
-  register:
-    trigger:
-      on_timeout:
-        enable: true
-        interval: 60 #action is triggered every 60 seconds
 
