--- a/versioncontrol/actions/join_git_repository.yaml
+++ b/versioncontrol/actions/join_git_repository.yaml
@@ -5,19 +5,19 @@
 
 version: 1.0
 action:
-  name: Add Git Repository
+  name: Join Git Repository
 
   version: 1
-  id: git::addrepo
+  id: git::joinrepo
   category: git
   type: python
   author: Anchorpoint Software GmbH
-  description: Creates a new or joins a Git Repository
+  description: Joins a Git Repository
   icon:
     path: :/icons/versioncontrol.svg
 
   script: git_repository.py
 
   register:
-    add_project_files:
+    join_project_files:
       enable: true
