--- a/template/template_package.yaml
+++ b/template/template_package.yaml
@@ -54,7 +54,7 @@ action:
       <li>[YYYYMMDD] <br> Date of today <br> e.g. [YYYYMMDD]_WIP -> 20220414_WIP</li>
     </ul>
 
-    For [YYYYMMDD], variants such as [YYYY], [YYYYMM] or [YYYY-MM-DD] are also possible.
+    For [YYYYMMDD], variants such as [YYMMDD], [YYYY], [YYYYMM] or [YYYY-MM-DD] are also possible.
 
     <h3>Implement your own logic with Python</h3>
 
