--- a/ffmpeg/ffmpeg_video_to_mp4.yaml
+++ b/ffmpeg/ffmpeg_video_to_mp4.yaml
@@ -7,7 +7,7 @@ version: "1.0"
 
 action:
   #Must Have Properties
-  name: "Create Proxy"
+  name: "Convert to mp4"
 
   #Optional Properties
   version: 1
