workspace overview example action

--- a/examples/example_package.yaml
+++ b/examples/example_package.yaml
@@ -33,3 +33,4 @@ action:
     - ap::examples::trigger::timer
     - ap::examples::trigger::actionenabled
     - ap::examples::trigger::attributeschanged
+    - ap::examples::workspace
