improve UX of create new repo

--- a/versioncontrol/actions/git_package.yaml
+++ b/versioncontrol/actions/git_package.yaml
@@ -108,10 +108,10 @@ If you want to make these files available for your team now, you have to enter a
     - git::push
     - git::rebase
     - git::revert
-    - git::openterminal
     - git::joinrepo
     - git::addrepo
     - git::settings
+    - git::createnewrepo
 
 
     
