--- a/versioncontrol/actions/git_package.yaml
+++ b/versioncontrol/actions/git_package.yaml
@@ -113,6 +113,7 @@ If you want to make these files available for your team now, you have to enter a
     - git::joinrepo
     - git::settings
     - git::project
+    - git::stash
 
 
     
