wip: git settings

--- a/versioncontrol/actions/git_package.yaml
+++ b/versioncontrol/actions/git_package.yaml
@@ -114,6 +114,7 @@ If you want to make these files available for your team now, you have to enter a
     - git::settings
     - git::project
     - git::stash
+    - git::settings
 
 
     
