--- a/ffmpeg/ffmpeg_package.yaml
+++ b/ffmpeg/ffmpeg_package.yaml
@@ -16,12 +16,8 @@ action:
   type: package
   enable: true
   author: "Anchorpoint Software GmbH"
-  description: Creates video files from image sequences or other videos with a single click
-  details: '
-    <p>This simple action converts an image sequence or a raw video into a small mp4 video. 
-      The frame rate and the location can be adjusted in the settings.</p>
-    <p><img src = "https://raw.githubusercontent.com/Anchorpoint-Software/ap-actions-data/main/png/videoConversion.png" width="400"></p>
-    '
+  description: Creates <a href='https://docs.anchorpoint.app/docs/5-utilities/1-video-conversion/'>video files from image sequences</a> or other videos with a single click
+  
   icon:
     path: "icons/packageIcon.svg"
 
