added example action to for show system notification

--- a/examples/example_package.yaml
+++ b/examples/example_package.yaml
@@ -26,6 +26,7 @@ action:
     - ap::examples::project
     - ap::examples::complexdialog
     - ap::examples::greetings
+    - ap::examples::notification
     - ap::examples::qml::greetings
     - ap::examples::widgets::greetings
     - ap::examples::settings
