--- a/imgConversion/copy_as_png.yaml
+++ b/imgConversion/copy_as_png.yaml
@@ -11,14 +11,14 @@ action:
 
   #Optional Properties
   version: 1
-  id: "ap::images::copy"
+  id: "ap::image::copy"
   category: "utility/code/examples/dialog"
   type: python
   enable: true
   author: "Anchorpoint Software GmbH"
   description: "This command takes an image, converts it to png and copies the bitmap to clipboard"
   icon:
-    path: ":icons/aplogo.svg"
+    path: "icons/copyImage.svg"
     
   script: "copy_as_png.py"
 
@@ -30,4 +30,4 @@ action:
   register:
     file: 
       enable: true 
-      filter: "*.psd;*.exr;*.tga" 
+      filter: "*.psd;*.exr;*.tga;*.obj;*.fbx;*.glb;*.gltf;*.hdr" 
