add .gitkeep setting that creates keep files on create folder hook

--- a/versioncontrol/actions/git_package.yaml
+++ b/versioncontrol/actions/git_package.yaml
@@ -19,9 +19,9 @@ action:
 
   author: "Anchorpoint Software GmbH"
   icon:
-    path: "../icons/git.svg"  
+    path: "../icons/git.svg"
 
-  dependencies: 
+  dependencies:
     - ../vc
     - is_git_repo.py
     - git_lfs_helper.py
@@ -41,6 +41,5 @@ action:
     - git::project
     - git::stash
     - git::settings
-
-
-    
+    - git::loadfile
+    - git::keep
