[AP-264] added gitlab self hosted integration

--- a/integrations/integrations_package.yaml
+++ b/integrations/integrations_package.yaml
@@ -22,4 +22,5 @@ action:
     - ap::integrations::azure_devops
     - ap::integrations::github
     - ap::integrations::gitlab
+    - ap::integrations::gitlab_self
     - ap::integrations::gitea
