--- a/versioncontrol/actions/git_fetch.yaml
+++ b/versioncontrol/actions/git_fetch.yaml
@@ -1,7 +1,7 @@
 # Anchorpoint Markup Language
 # Predefined Variables: e.g. ${path}
 # Environment Variables: e.g. ${MY_VARIABLE}
-# Full documentation: https://docs.anchorpoint.app/Actions/Reference
+# Full documentation: https://docs.anchorpoint.app/docs/actions/create-actions
 
 version: 1.0
 action:
