--- a/ruff.toml
+++ b/ruff.toml
@@ -40,7 +40,7 @@ target-version = "py39"
 # Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
 # McCabe complexity (`C901`) by default.
 select = ["E4", "E7", "E9", "F"]
-ignore = ["F841", "E701", "E722", "F405", "E402"]
+ignore = ["F841", "E722", "E402"]
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
