--- a/cloudDrive/cloudDrive_package.yaml
+++ b/cloudDrive/cloudDrive_package.yaml
@@ -13,7 +13,7 @@ action:
   type: package
   enable: false
   author: Anchorpoint Software GmbH
-  description: Create a <a href'https://docs.anchorpoint.app/docs/2-manage-files/2-Cloud-NAS/'>network drive</a> that can connect to an S3 compatible cloud (experimental)
+  description: Create a <a href'https://docs.anchorpoint.app/docs/2-manage-files/2-Cloud-NAS/'>network drive</a> that can connect to an S3 compatible cloud (legacy feature)
   icon:
     path: icons/driveCloud.svg
 
