Endable cloud drive back and add a deprecated note

--- a/cloudDrive/cloudDrive_package.yaml
+++ b/cloudDrive/cloudDrive_package.yaml
@@ -11,9 +11,9 @@ action:
   id: ap::package::cloudDrive
   category: infrastructure/cloudDrive
   type: package
-  enable: false
+  enable: true
   author: Anchorpoint Software GmbH
-  description: Create a <a href'https://docs.anchorpoint.app/docs/2-manage-files/2-Cloud-NAS/'>network drive</a> that can connect to an S3 compatible cloud (legacy feature)
+  description: Create a <a href'https://docs.anchorpoint.app/docs/2-manage-files/2-Cloud-NAS/'>network drive</a> that can connect to an S3 compatible cloud (deprecated)
   icon:
     path: icons/driveCloud.svg
 
