--- a/examples/example_package.yaml
+++ b/examples/example_package.yaml
@@ -37,3 +37,4 @@ action:
     - ap::examples::trigger::actionenabled
     - ap::examples::trigger::attributeschanged
     - ap::examples::workspace
+    - ap::examples::pagesdialog
