--- a/examples/example_package.yaml
+++ b/examples/example_package.yaml
@@ -38,3 +38,4 @@ action:
     - ap::examples::trigger::attributeschanged
     - ap::examples::workspace
     - ap::examples::pagesdialog
+    - ap::examples::progressdialog
