[AP-539] updated package and icons

--- a/csvImport/tasks_from_csv.yaml
+++ b/csvImport/tasks_from_csv.yaml
@@ -14,7 +14,7 @@ action:
   author: Anchorpoint Software GmbH
   description: ""
   icon:
-    path: :/icons/action.svg
+    path: :/icons/sum.svg
   enable: true
   inputs:
     type: "task"
