[AP-539] add task and new task examples

--- a/examples/example_package.yaml
+++ b/examples/example_package.yaml
@@ -39,3 +39,5 @@ action:
     - ap::examples::workspace
     - ap::examples::pagesdialog
     - ap::examples::progressdialog
+    - ap::examples::marktasksdone
+    - ap::examples::setoftasks
