[AP-539] add example to get members of a workspace/project

--- a/examples/example_package.yaml
+++ b/examples/example_package.yaml
@@ -41,3 +41,4 @@ action:
     - ap::examples::progressdialog
     - ap::examples::marktasksdone
     - ap::examples::setoftasks
+    - ap::examples::projectmembers
