--- a/csvImport/csv_package.yaml
+++ b/csvImport/csv_package.yaml
@@ -14,7 +14,7 @@ action:
   id: "ap::package::csv"
   category: "csv"
   type: package
-  enable: false
+  enable: true
   description: Creates folders or tasks from a <a href="https://docs.anchorpoint.app/docs/asset-management/utilities/import-csv/">CSV file</a> including Attributes.
 
   author: "Anchorpoint Software GmbH"
