--- a/referenced_file/publish.yaml
+++ b/referenced_file/publish.yaml
@@ -8,7 +8,7 @@ action:
   name: Create Referenced File
 
   version: 1
-  id: ap::vc::publish
+  id: ap::referenced::file
   category: user
   type: python
   author: Anchorpoint Software GmbH
