add project settings for master file

--- a/inc_versioning_on_shared_drive/inc_package.yaml
+++ b/inc_versioning_on_shared_drive/inc_package.yaml
@@ -25,6 +25,8 @@ action:
   actions:
     -  ap::inc::timeline
     -  ap::inc::project
+    -  ap::inc::ui-publish
+    -  ap::inc::project-settings
 
 
     
