added maya integration to action package

--- a/dcc_pipeline_tools/dcc_package.yaml
+++ b/dcc_pipeline_tools/dcc_package.yaml
@@ -28,5 +28,5 @@ action:
     -  ap::inc::project-settings
     -  ap::inc::publish
     -  ap::integrations::cinema-4d
-
+    -  ap::integrations::maya
     
