Added pull event hook,
put the buttons in the sidebar instead of project settings and do the unreal running check only when the binary unzipping failed

--- a/unreal_binary_sync/auto_pull_hook.yaml
+++ b/unreal_binary_sync/auto_pull_hook.yaml
@@ -5,19 +5,11 @@
 
 version: 1.0
 action:
-  name: Sync Binaries
+  name: Hooks
 
   version: 1
-  id: ap::unreal::sync
-  category: user
+  id: ap::unreal::hooks
   type: python
   author: Anchorpoint Software GmbH
-  description: Syncs Game and Editor binaries
 
-  script: "sync_binaries.py"
-  icon:
-    path: :/icons/unrealEngine.svg
-  
-  register:
-    sidebar:
-      enable: True
+  script: auto_pull_hook.py
