--- a/unreal_binary_sync/binary_sync_package.yaml
+++ b/unreal_binary_sync/binary_sync_package.yaml
@@ -27,9 +27,8 @@ action:
     - win
 
   actions:
-    - ap::unreal::sync
-    - ap::unreal::settings
-    - ap::unreal::submit
+    - ap::unreal::pull
+    - ap::unreal::push
     - ap::unreal::hooks
 
 
