added readme and icons

--- a/unreal_binary_sync/pull_binaries.yaml
+++ b/unreal_binary_sync/pull_binaries.yaml
@@ -16,7 +16,7 @@ action:
 
   script: pull_binaries.py
   icon:
-    path: :/icons/unrealEngine.svg
+    path: icons/unrealPull.svg
   
   register:
     sidebar:
