Added project settings to action package

--- a/unreal_binary_sync/local_project_settings.yaml
+++ b/unreal_binary_sync/local_project_settings.yaml
@@ -14,4 +14,4 @@ action:
   author: Anchorpoint Software GmbH
   description: ""
 
-  script: "local_settings.py"
+  script: "local_project_settings.py"
