--- a/dcc_pipeline_tools/publish_from_ui.yaml
+++ b/dcc_pipeline_tools/publish_from_ui.yaml
@@ -1,7 +1,7 @@
 # Anchorpoint Markup Language
 # Predefined Variables: e.g. ${path}
 # Environment Variables: e.g. ${MY_VARIABLE}
-# Full documentation: https://docs.anchorpoint.app/docs/actions/create-actions
+# Full documentation: https://docs.anchorpoint.app/api/intro
 
 version: 1.0
 action:
