[-] fix missing links

--- a/referenced_file/publish_package.yaml
+++ b/referenced_file/publish_package.yaml
@@ -15,7 +15,7 @@ action:
   category: user
   type: package
   enable: false
-  description: Creates <a href='https://docs.anchorpoint.app/docs/3-work-in-a-team/4-Version-Control%20using%20inc%20save/#creating-referenced-files'>(publishes)</a> a copy of the latest version in the incremental stack and removes the increment. Useful for importing an asset into a shot or assembling scenes.
+  description: Creates <a href='https://docs.anchorpoint.app/assets/browser/#creating-referenced-files'>(publishes)</a> a copy of the latest version in the incremental stack and removes the increment. Useful for importing an asset into a shot or assembling scenes.
 
   author: "Anchorpoint Software GmbH"
   icon:
